# hslu-seminarwoche

./: .gitignore  Makefile  Readme.md  pyproject.toml  space_syntax_utils.py
data/: datapackage.json  lucerne-bakeries.csv  lucerne-bakeries.geojson  lucerne-supermarkets.csv  lucerne-supermarkets.geojson
