[tool.poetry]
name = "hslu seminarwoche"
version = "0.1.0"
description = ""
authors = ["Thorben Westerhuys <thorben@cividi.ch>"]

[tool.poetry.dependencies]
python = "^3.8"
dataflows = "^0.2"
ipykernel = "^5.4"
numpy = "^1.20"
geopandas = "^0.8"
osmnx = "^1.0"
folium = "^0.12"
sklearn = "^0.0"
python-dotenv = "^0.15"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
